<resources>
    <string name="accept">Accept</string>
    <string name="access_camera_title">Can access camera</string>
    <string name="access_fine_message">This application can access its exact position and is a risk for your privacy.</string>
    <string name="action_settings">Settings</string>
    <string name="activity_name_pattern">Start.*cmp=([\w\._]*)/([\w\._]*)</string>
    <string name="ads_message">Displays ads while in use, including banners, pop-ups, and other graphics. The ads are common in free apps.</string>
    <string name="answer_is_not_empty">Answer is not empty</string>
    <string name="app">apps</string>
    <string name="app_lock">App Lock</string>
    <string name="app_name">Smart Antivirus AppLock</string>
    <string name="application">Application</string>
    <string name="application_capital">APPLICATION</string>
    <string name="applocker_running">AppLocker running</string>
    <string name="applocker_service">Applocker service</string>
    <string name="apps">Apps</string>
    <string name="apps_and_system">Apps &amp; System</string>
    <string name="apps_ignored">Apps ignored</string>
    <string name="apps_running">apps running</string>
    <string name="apps_with_privacy_issues">Apps with privacy issues</string>
    <string name="auto_scan">Auto Scan</string>
    <string name="basic_information">Basic Information</string>
    <string name="boost">Boost</string>
    <string name="booster">Booster</string>
    <string name="browser_history">BROWSER HISTORY</string>
    <string name="browser_is_clean">Browser is clean</string>
    <string name="browser_privacy">Browser Privacy</string>
    <string name="bt_scan">Scan</string>
    <string name="cache_junk">Cache Junk</string>
    <string name="call_phone_message">This app can initiate a phone call without going through the Dialer user interface for the user to confirm the call. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="camera_message">This application can access the camera device and is a risk for your privacy.</string>
    <string name="can_make_call_title">Can make calls</string>
    <string name="cancel">Cancel</string>
    <string name="charging_boost">Charging Boost</string>
    <string name="clean">Clean</string>
    <string name="cpu">CPU</string>
    <string name="create_shortcuts">Create Shortcuts</string>
    <string name="detecting_dangerous">Detecting dangerous</string>
    <string name="dialog_trust_app">You want to trust this application?</string>
    <string name="done">DONE</string>
    <string name="edit_applocker">Edit Applocker</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_the_unlock_password">Edit the Unlock password</string>
    <string name="enable">ENABLE</string>
    <string name="enable_applocker">Enable Applocker</string>
    <string name="enable_noah_security">Enable Noah Security</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="enter_to_solve_problems">Problems found, click to resolve…</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="external_storage">External Storage</string>
    <string name="facebook_app_id">301320266895192</string>
    <string name="feedback">Feedback</string>
    <string name="float_window">Float Window</string>
    <string name="force_stop">Force Stop</string>
    <string name="forgot_passwoord">FORGOT PASSWORD?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="found">Found</string>
    <string name="freeable">Freeable</string>
    <string name="freeable_memory">Freeable Memory</string>
    <string name="has_been_scanned">has problems.</string>
    <string name="has_no_threats">is safe to open.</string>
    <string name="high_risk">High Risk</string>
    <string name="if_you_forget_your_unlock_pattern_you_can_reset_it_bt_answering_the_security_question">If you forget your unlock pattern, you can reset it bt answering the Security Question</string>
    <string name="imei">IMEI</string>
    <string name="in_danger">In Danger</string>
    <string name="installedGPlay_message">Installing apps from unknown sources can lead to malware. Go to Settings&gt;Security and then disable Unknown Sources.</string>
    <string name="introduction">Introduction</string>
    <string name="intruder_selfie">Intruder selfie</string>
    <string name="is_secure">is safe to open.</string>
    <string name="issues">issues</string>
    <string name="junk_files">JUNK FILES</string>
    <string name="junk_found">JUNK FOUND</string>
    <string name="language_settings">Language Settings</string>
    <string name="loading">Loading…</string>
    <string name="location_shared">Location shared</string>
    <string name="lock_your_apps_so_that_no_one_can_snoop_on">Lock your apps so that no one can snoop on</string>
    <string name="locked">Locked</string>
    <string name="logcat_clear_command">logcat -c</string>
    <string name="logcat_command">logcat ActivityManager:I *:S</string>
    <string name="medium_risk">Medium Risk</string>
    <string name="memory">Memory</string>
    <string name="memory_boost">Memory Boost</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="minutes_of_time_before_the_app_is_relocked">Minutes of time before the app is relocked</string>
    <string name="more_app">More App</string>
    <string name="more_than">More than</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no">No</string>
    <string name="noah_security_use_accessibility">Test</string>
    <string name="not_now">NOT NOW</string>
    <string name="notification">Notification</string>
    <string name="ok">OK</string>
    <string name="other">Other</string>
    <string name="outgoing_calls_title">Can control outgoing calls</string>
    <string name="outgoing_phone_message">This app can see the number being dialed during an outgoing call with the option to redirect the call to a different number or abort the call altogether. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="password_is_not_required_after_unlocking_for_a_period_of_time">Password is not required after unlocking for a period of time</string>
    <string name="patterns_do_not_match">Patterns do not match</string>
    <string name="phone_boost">PHONE BOOST</string>
    <string name="phone_data_shared">Phone data shared</string>
    <string name="phone_info">Phone Info</string>
    <string name="please_select_and_answer_your_security_questions">Please select and answer your security questions</string>
    <string name="please_try_later">Please try later</string>
    <string name="privacy">Privacy</string>
    <string name="problem_found">problem found</string>
    <string name="protect">PROTECT</string>
    <string name="question_or_answer_do_not_match">Question or Answer do not match, try again</string>
    <string name="quick_setting">Quick Setting</string>
    <string name="quiet_notifications">Quiet Notification</string>
    <string name="ram">RAM</string>
    <string name="rate_us">Rate Us!</string>
    <string name="read_history_bookmark_title">Can read your history</string>
    <string name="read_history_message">This application can read your history bookmarks and is a risk for your privacy.</string>
    <string name="read_phone_message">This app collects and sends SIM card details, including address book, mobile PIN, and call history. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="read_sms_message">This application can read your private SMS and is a risk for your privacy.</string>
    <string name="read_your_sms">Can read your SMS</string>
    <string name="recommend_to_lock">Recommend to lock</string>
    <string name="record_audio_message">This application can record audio and is a risk for your privacy.</string>
    <string name="record_audio_title">Can record audio</string>
    <string name="relock_policy">Relock Policy</string>
    <string name="relock_timeout">Relock Timeout</string>
    <string name="remove_ignored_app_message">Do you want to remove from the list</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="rom">ROM</string>
    <string name="root_state">Root State</string>
    <string name="run_first_analysis_to_check_threats">Run first analysis to check threats</string>
    <string name="scanning_for_privacy">Scanning for privacy</string>
    <string name="scanning_for_threat">Scanning for threat</string>
    <string name="sd_card">SD Card</string>
    <string name="search_menu_title">Search</string>
    <string name="select_timeout">Select Timeout</string>
    <string name="send_sms_message">This application can send SMS. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="send_sms_title">Can send SMS</string>
    <string name="service_settings">Service Settings</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="set_a_security_question">Set a security question</string>
    <string name="settings">Settings</string>
    <string name="show_ignored_list">Show Ignored List</string>
    <string name="skip_all">SKIP ALL</string>
    <string name="someone_tries_to_open_your_app">Someone tries to open your app.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop_scanning">Are you sure to stop scanning?</string>
    <string name="storage">Storage</string>
    <string name="suggested">Suggested</string>
    <string name="system">System</string>
    <string name="system_app_unknown_app_menace_title">Unknown Sources Enabled</string>
    <string name="system_app_usb_menace_title">USB Debugging Enabled</string>
    <string name="system_os_version">System OS Version</string>
    <string name="take_a_photo_of_someone_entering_an_incorrect_code">Take a photo of someone entering an incorrect code</string>
    <string name="threat">Threat</string>
    <string name="title_ads">Ads Displayed</string>
    <string name="title_installedGPlay">Unknown sources</string>
    <string name="total_found">Total found:</string>
    <string name="transition_main_fragment_to_antivirus">hello</string>
    <string name="transition_problem_to_detail">hello</string>
    <string name="trusted_by_app">is a trusted application verified by AMS Antivirus.</string>
    <string name="trusted_message">is a trusted application.</string>
    <string name="unknownApp_add_whitelist_message">Do you want to add Unknown Sources to white list?</string>
    <string name="unknownApp_message">Installing apps from unknown sources can lead to malware. Tap Open Settings and then disable Unknown Sources.</string>
    <string name="unknownApp_remove_whitelist_message">Do you want to remove Unknown Sources from white list?</string>
    <string name="update">Update</string>
    <string name="usb_add_whitelist_message">Do you want to add USB Debugging to white list?</string>
    <string name="usb_message">Enabling USB debugging is not recommended unless you use your device for software development purposes. Tap Open Settings and disable USB debugging to protect your device.</string>
    <string name="usb_remove_whitelist_message">Do you want to remove USB Debugging from white list?</string>
    <string name="usb_title">Unsecure Setting</string>
    <string name="user_experience_program">User Experience Program</string>
    <string name="version">Version</string>
    <string name="progress">SCANNING</string>
    <string name="admob_banner" translatable="false">ca-app-pub-8840605642190960/1642148768</string>
</resources>