<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/settings_background"
    android:clipChildren="false"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clipChildren="false">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clipChildren="false">

            <com.ln.antivirus.mobilesecurity.animation.ArcProgress
                android:id="@+id/scan_progress"
                android:layout_width="260.0dip"
                android:layout_height="260.0dip"
                android:layout_above="@+id/layout"
                android:layout_centerHorizontal="true"
                custom:arc_bottom_text="@string/progress"
                custom:arc_bottom_text_size="22.0dip"
                custom:arc_progress="1"
                custom:arc_stroke_width="15.0dip"
                custom:arc_suffix_text_size="40.0sp"
                custom:arc_text_color="@color/white"
                custom:arc_text_size="70.0sp" />

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/task_layout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="38dp"
                android:clipChildren="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:minHeight="46.0sp"
                    android:text="@string/loading"
                    android:textColor="@android:color/white"
                    android:textSize="32.0sp" />

                <TextView
                    android:id="@+id/tv_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tv_progress"
                    android:layout_alignBottom="@+id/tv_progress"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:text="@string/scanning_for_threat"
                    android:textColor="@android:color/white"
                    android:textSize="18.0sp" />

                <TextView
                    android:id="@+id/bottomIssues_booster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_step"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="5.0dip"
                    android:gravity="center"
                    android:minEms="4"
                    android:textColor="@android:color/white"
                    android:textSize="26.0sp" />

                <TextView
                    android:id="@+id/bottomIssues_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_step"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="5.0dip"
                    android:gravity="center"
                    android:minEms="4"
                    android:textColor="@android:color/white"
                    android:textSize="26.0sp" />

                <TextView
                    android:id="@+id/bottomIssues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_step"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="5.0dip"
                    android:gravity="center"
                    android:minEms="4"
                    android:textColor="@android:color/white"
                    android:textSize="26.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_step"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="5.0dip"
                    android:gravity="center"
                    android:minEms="4"
                    android:text="0000"
                    android:textColor="@android:color/white"
                    android:textSize="30.0sp"
                    android:visibility="invisible" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/task_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="60dp"
                android:background="@mipmap/bg_footer"
                android:clipChildren="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.0"
                    android:clipChildren="false"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clipChildren="false">

                        <ImageView
                            android:id="@+id/img_threat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@mipmap/threat_icon" />

                        <TextView
                            android:id="@+id/tv_threat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="22.0sp"
                            android:visibility="gone" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_title_threat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4.0dip"
                        android:text="@string/threat"
                        android:textColor="@android:color/white"
                        android:textSize="17dp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@mipmap/line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.0"
                    android:clipChildren="false"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clipChildren="false">

                        <ImageView
                            android:id="@+id/img_privacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@mipmap/privacy_icon" />

                        <TextView
                            android:id="@+id/tv_privacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:textColor="@android:color/white"
                            android:textSize="22.0sp" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_title_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4.0dip"
                        android:text="@string/privacy"
                        android:textColor="@android:color/white"
                        android:textSize="17dp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@mipmap/line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.0"
                    android:clipChildren="false"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clipChildren="false">

                        <ImageView
                            android:id="@+id/img_booster"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@mipmap/booster_icon" />

                        <TextView
                            android:id="@+id/tv_booster"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="22.0sp"
                            android:visibility="gone" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_title_booster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4.0dip"
                        android:text="@string/booster"
                        android:textColor="@android:color/white"
                        android:textSize="17dp" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_banner" />
        </RelativeLayout>


    </FrameLayout>


</LinearLayout>
